# doc

./: .travis.yml  AUTHORS  CMakeLists.txt  COPYING  README.rst
src/: CMakeLists.txt  GenericInformation.tex.in  Math_Notations.sty  otcommon.sty
src/DevelopersGuide/: CMakeLists.txt  Cpp.tex  ExternalCodeInterface.tex  FileNames.tex  FunctionTypes.tex  FutureDevelopments.tex  OpenTURNS_DevelopersGuide.tex  Package.tex  Python.tex  Wrapper.tex  WrapperStructure.tex  architecture.tex  coding_rules.tex  coding_rules_introduction.tex  documentation_development.tex  introduction.tex  library_wrapper.tex  library_wrapper_introduction.tex  module_development.tex  platform_development.tex  version_control.tex  windows_native_port.tex  windows_port.tex  wrapper_development.tex
src/DevelopersGuide/Scripts/: external_program.py  input_template.py  program_wrapper.py  pythonfunction_couplingtools.py  pythonfunction_point.py  pythonfunction_sample.py
src/DocumentationGuide/: CMakeLists.txt  OpenTURNS_DocumentationGuide.tex
src/ExamplesGuide/: CMakeLists.txt  OpenTURNS_ExamplesGuide.tex  resultatExampleBeam.tex  scriptExample_Truss_PhysicalModel.py  scriptExample_Truss_ProbaModel.py  scriptExample_Truss_mainSparsePolyChaos.py  scriptExample_beam.py
src/ReferenceGuide/: CMakeLists.txt  OpenTURNS_ReferenceGuide.sty  OpenTURNS_ReferenceGuide.tex  docref_B11_EmpiricalCDF.tex  docref_B11_KernelSmoothing.tex  docref_B121_DistributionSelection.tex  docref_B122_Copulas.tex  docref_B122_RandomMixture.tex  docref_B201_Graph.tex  docref_B202_Smirnov.tex  docref_B21_BayesianCalibration.tex  docref_B21_MaximumLikelihood.tex  docref_B21_MetropolisHastings.tex  docref_B21_ParametricEstimation.tex  docref_B221_Graph.tex  docref_B222_BayesianInformationCriterion.tex  docref_B222_TestAD.tex  docref_B222_TestCVM.tex  docref_B222_TestChi2.tex  docref_B222_TestKS.tex  docref_B231_Pearson.tex  docref_B231_TestPearson.tex  docref_B232_Spearman.tex  docref_B232_TestSpearman.tex  docref_B233_TestChi2.tex  docref_B234_LinearRegression.tex  docref_C11_ExperimentPlanes.tex  docref_C11_MinMax.tex  docref_C11_OptimizationAlgo.tex  docref_C211_QuadraticCumul.tex  docref_C221_MonteCarloStd.tex  docref_C311_Form.tex  docref_C311_ReliabilityIndex.tex  docref_C311_Sorm.tex  docref_C311_TransIso.tex  docref_C311_TransIso_GeneralizedNataf.tex  docref_C311_TransIso_Rosenblatt.tex  docref_C312_SampleSphere.tex  docref_C312_StrongMaxTest.tex  docref_C321_MonteCarloStd.tex  (+35 more)
src/ReferenceGuide/Figures/: henry.py  henryBad.py  linearRegModel.py  script_QQplot.py  script_QQplotDistrib.py  script_copula.py  script_experiment.py  script_henry.py  script_henryBad.py  script_lowDiscrepancySequences.py  script_pearson_test.py  script_spearman_test.py  script_usualDistribution.py  smoothing.py
src/UseCasesGuide/: CMakeLists.txt  DickeyFullerStrategy.tex  OpenTURNS_UseCasesGuide.sty  OpenTURNS_UseCasesGuide.tex  docUC_CentralUncertainty_ANCOVAIndices.tex  docUC_CentralUncertainty_CobWebGraph.tex  docUC_CentralUncertainty_CorrelationAnalysis.tex  docUC_CentralUncertainty_FASTIndices.tex  docUC_CentralUncertainty_MomentsEvaluation.tex  docUC_CentralUncertainty_QuantileEstimation.tex  docUC_CentralUncertainty_SobolIndices.tex  docUC_CentralUncertainty_TaylorVarDecomposition.tex  docUC_InputBayesian_BayesDist.tex  docUC_InputBayesian_CondDist.tex  docUC_InputBayesian_RandomVector.tex  docUC_InputNoData_ComposedDistribution.tex  docUC_InputNoData_CompositeDistribution.tex  docUC_InputNoData_Copula.tex  docUC_InputNoData_CustomDistFromPython.tex  docUC_InputNoData_CustomRandVectFromPython.tex  docUC_InputNoData_DistManipulation.tex  docUC_InputNoData_Mixture.tex  docUC_InputNoData_ProductDistribution.tex  docUC_InputNoData_TruncatedDist.tex  docUC_InputNoData_UsualDist.tex  docUC_InputRandomVector.tex  docUC_InputWithData_BayesianCalibration.tex  docUC_InputWithData_CSV.tex  docUC_InputWithData_ChoiceFittedDistributions.tex  docUC_InputWithData_CloudDrawing.tex  docUC_InputWithData_CopulaEstimation.tex  docUC_InputWithData_CopulaKendallPlotTest.tex  docUC_InputWithData_EmpiricalDrawing.tex  docUC_InputWithData_FittingTests.tex  docUC_InputWithData_IndependenceTest.tex  docUC_InputWithData_KernelSmoothing.tex  docUC_InputWithData_LinearModel.tex  docUC_InputWithData_MaxLikelihood.tex  docUC_InputWithData_NormalFittingTests.tex  docUC_InputWithData_PearsonSpearmanTests.tex  (+83 more)
src/UseCasesGuide/Figures/: myField.vtk  myTimeSeries.vtk  script_ARMA.py  script_CobWeb.py  script_CopulaEstimation.py  script_DataHist.py  script_ExperimentPlanes.py  script_FORM.py  script_Field.py  script_HenryLine.py  script_Histogram.py  script_KendallPLot.py  script_MaximumLikelihoodEstimation.py  script_Mesh.py  script_MonteCarloProcess.py  script_NonStationaryCovarianceFunction_Estimation.py  script_NumpyTypeConversion.py  script_PolynomialChaosExpansion.py  script_ProductDistribution.py  script_QQPlot.py  script_RandomMixture.py  script_RandomWalk.py  script_SimulationSensitivityAnalysis.py  script_StationaryCovarianceModel.py  script_TimeSeries.py  script_UserDefinedSpectralModel.py  script_UserDefinedStationaryCovarianceModel.py  script_VisuProcess.py  script_WhiteNoise.py  (+16 more)
src/UserManual/: BaseObjects_UserManual.tex  CMakeLists.txt  CombinatorialGenerator_UserManual.tex  DistFunc_UserManual.tex  ExperimentPlane_UserManual.tex  FFT_UserManual.tex  Function_UserManual.tex  Graphs_UserManual.tex  Integration_UserManual.tex  NonParametricResponseSurfaceApproximation_FCE_UserManual.tex  NonParametricResponseSurfaceApproximation_Kriging_UserManual.tex  OpenTURNS_UserManual_TUI.sty  OpenTURNS_UserManual_TUI.tex  Optimization_UserManual.tex  ParametricResponseSurfaceApproximation_UserManual.tex  Polynomials_UserManual.tex  ProbabilisticModeling_UserManual.tex  QuadraticCumul_UserManual.tex  ResourceMap_UserManual.tex  SpecFunc_UserManual.tex  Statistics_UserManual.tex  Stochastic_Process_UserManual.tex  ThresholdProbabilityReliabilityAlgorithm_UserManual.tex  ThresholdProbabilitySimulationAlgorithm_UserManual.tex  user_manual_title.tex
test/: CMakeLists.txt
(+100 files in other folders)
