

set ( PYINSTALLCHECK_ENVIRONMENT "PYTHONPATH=${OPENTURNS_PYTHON${PYTHON_VERSION_MAJOR}_MODULE_PATH}" )

set ( PYINSTALLCHECK_TO_BE_RUN )

macro ( ot_pycheck_test GUIDENAME TESTNAME )
  set ( TESTNAME_TGT ${TESTNAME} )
  set ( TESTNAME_SRC ${CMAKE_SOURCE_DIR}/src/${GUIDENAME}/Scripts/${TESTNAME_TGT}.py )
  get_source_file_property ( TESTNAME_LOC ${TESTNAME_SRC} LOCATION )
  set ( COMMAND "( ${PYTHON_EXECUTABLE} ${TESTNAME_LOC} > /dev/null )" )
  add_test ( pycheck_${GUIDENAME}-${TESTNAME} "sh" "-c" "${COMMAND}" )
  set_tests_properties ( pycheck_${GUIDENAME}-${TESTNAME} PROPERTIES ENVIRONMENT "${PYINSTALLCHECK_ENVIRONMENT}" )
  list ( APPEND PYINSTALLCHECK_TO_BE_RUN ${TESTNAME_SRC} )
  install ( FILES ${TESTNAME_SRC} DESTINATION ${EXAMPLES_INSTALL_PATH} )
endmacro ()  


ot_pycheck_test ( UseCasesGuide script_docUC_InputBayesian_RandomVector )
ot_pycheck_test ( UseCasesGuide script_docUC_InputBayesian_BayesDist )
ot_pycheck_test ( UseCasesGuide script_docUC_InputBayesian_CondDist )
ot_pycheck_test ( UseCasesGuide script_docUC_InputNoData_ComposedDistribution )
ot_pycheck_test ( UseCasesGuide script_docUC_InputNoData_CompositeDistribution )
ot_pycheck_test ( UseCasesGuide script_docUC_InputNoData_Copula )
ot_pycheck_test ( UseCasesGuide script_docUC_InputNoData_ProductDistribution )
ot_pycheck_test ( UseCasesGuide script_docUC_InputNoData_DistManipulation )
ot_pycheck_test ( UseCasesGuide script_docUC_InputNoData_Mixture )
ot_pycheck_test ( UseCasesGuide script_docUC_InputNoData_TruncatedDist )
ot_pycheck_test ( UseCasesGuide script_docUC_InputNoData_UsualDist )
ot_pycheck_test ( UseCasesGuide script_docUC_InputWithData_BayesianCalibration1 )
ot_pycheck_test ( UseCasesGuide script_docUC_InputWithData_BayesianCalibration2 )
ot_pycheck_test ( UseCasesGuide script_docUC_InputWithData_ChoiceFittedDistributions )
ot_pycheck_test ( UseCasesGuide script_docUC_InputWithData_CloudDrawing )
ot_pycheck_test ( UseCasesGuide script_docUC_InputWithData_CopulaEstimation )
ot_pycheck_test ( UseCasesGuide script_docUC_InputWithData_CopulaKendallPlotTest )
ot_pycheck_test ( UseCasesGuide script_docUC_InputWithData_CSV )
ot_pycheck_test ( UseCasesGuide script_docUC_InputWithData_EmpiricalDrawing )
ot_pycheck_test ( UseCasesGuide script_docUC_InputWithData_FittingTests )
ot_pycheck_test ( UseCasesGuide script_docUC_InputWithData_IndependenceTest )
ot_pycheck_test ( UseCasesGuide script_docUC_InputWithData_KernelSmoothing )
ot_pycheck_test ( UseCasesGuide script_docUC_InputWithData_LinearModel )
ot_pycheck_test ( UseCasesGuide script_docUC_InputWithData_MaxLikelihood )
ot_pycheck_test ( UseCasesGuide script_docUC_InputWithData_NormalFittingTests )
ot_pycheck_test ( UseCasesGuide script_docUC_InputWithData_PearsonSpearmanTests )
ot_pycheck_test ( UseCasesGuide script_docUC_InputWithData_RegressionTest )
ot_pycheck_test ( UseCasesGuide script_docUC_InputWithData_StatisticalManipulation )
ot_pycheck_test ( UseCasesGuide script_docUC_InputWithData_estSameDist )
ot_pycheck_test ( UseCasesGuide script_docUC_OVI_FromLSF )
ot_pycheck_test ( UseCasesGuide script_docUC_OVI_RandomMixture )
ot_pycheck_test ( UseCasesGuide script_docUC_LSF_Analytical )
ot_pycheck_test ( UseCasesGuide script_docUC_LSF_PythonScript )
ot_pycheck_test ( UseCasesGuide script_docUC_LSF_SomeParticularFunctions )
ot_pycheck_test ( UseCasesGuide script_docUC_LSF_NMFManipulation )
ot_pycheck_test ( UseCasesGuide script_docUC_LSF_DynamicalFunction )
ot_pycheck_test ( UseCasesGuide script_docUC_LSF_DeterministicVar2 )
ot_pycheck_test ( UseCasesGuide script_docUC_LSF_ExpertMixture )
ot_pycheck_test ( UseCasesGuide script_docUC_RespSurface_PolyChaosExpansion )
ot_pycheck_test ( UseCasesGuide script_docUC_RespSurface_PolyChaosExploitation )
ot_pycheck_test ( UseCasesGuide script_docUC_RespSurface_PolyChaosDrawings1 )
ot_pycheck_test ( UseCasesGuide script_docUC_RespSurface_PolyChaosDrawings2 )
ot_pycheck_test ( UseCasesGuide script_docUC_RespSurface_Kriging )
ot_pycheck_test ( UseCasesGuide script_docUC_RespSurface_PolyChaos_database )
ot_pycheck_test ( UseCasesGuide script_docUC_CentralUncertainty_CobWebGraph )
ot_pycheck_test ( UseCasesGuide script_docUC_CentralUncertainty_CorrelationAnalysis )
ot_pycheck_test ( UseCasesGuide script_docUC_CentralUncertainty_MomentsEvaluation )
ot_pycheck_test ( UseCasesGuide script_docUC_CentralUncertainty_QuantileEstimation )
ot_pycheck_test ( UseCasesGuide script_docUC_CentralUncertainty_SobolIndices )
ot_pycheck_test ( UseCasesGuide script_docUC_CentralUncertainty_TaylorVarDecomposition )
ot_pycheck_test ( UseCasesGuide script_docUC_MinMax_CombinatorialGenerators )
ot_pycheck_test ( UseCasesGuide script_docUC_StocProc_ARMA_Creation )
ot_pycheck_test ( UseCasesGuide script_docUC_StocProc_ARMA_Estimation_Whittle )
ot_pycheck_test ( UseCasesGuide script_docUC_StocProc_ARMA_Manipulation )
ot_pycheck_test ( UseCasesGuide script_docUC_StocProc_BoxCox )
ot_pycheck_test ( UseCasesGuide script_docUC_StocProc_CompositeProcess )
ot_pycheck_test ( UseCasesGuide script_docUC_StocProc_DensitySpectralFunction_Estimation )
ot_pycheck_test ( UseCasesGuide script_docUC_StocProc_DensitySpectralFunction_Param )
ot_pycheck_test ( UseCasesGuide script_docUC_StocProc_DensitySpectralFunction_UserDefined )
ot_pycheck_test ( UseCasesGuide script_docUC_StocProc_Event )
ot_pycheck_test ( UseCasesGuide script_docUC_StocProc_Field )
ot_pycheck_test ( UseCasesGuide script_docUC_StocProc_FunctionalBasisProcess )
ot_pycheck_test ( UseCasesGuide script_docUC_StocProc_Mesh )
ot_pycheck_test ( UseCasesGuide script_docUC_StocProc_MonteCarlo )
ot_pycheck_test ( UseCasesGuide script_docUC_StocProc_NonStationaryCovarianceFunction_Estimation )
ot_pycheck_test ( UseCasesGuide script_docUC_StocProc_NonStationaryCovarianceFunction_UserDefined )
#ot_pycheck_test ( UseCasesGuide script_docUC_StocProc_NormalProcess_Creation )
ot_pycheck_test ( UseCasesGuide script_docUC_StocProc_Process )
ot_pycheck_test ( UseCasesGuide script_docUC_StocProc_ProcessSample )
ot_pycheck_test ( UseCasesGuide script_docUC_StocProc_RandomWalk )
ot_pycheck_test ( UseCasesGuide script_docUC_StocProc_StationaryCovarianceFunction_Estimation )
ot_pycheck_test ( UseCasesGuide script_docUC_StocProc_StationaryCovarianceFunction_Param )
ot_pycheck_test ( UseCasesGuide script_docUC_StocProc_StationaryCovarianceFunction_UserDefined )
ot_pycheck_test ( UseCasesGuide script_docUC_StocProc_TimeGrid )
ot_pycheck_test ( UseCasesGuide script_docUC_StocProc_TimeSeries )
ot_pycheck_test ( UseCasesGuide script_docUC_StocProc_TrendComputation )
ot_pycheck_test ( UseCasesGuide script_docUC_StocProc_WhiteNoise )
ot_pycheck_test ( UseCasesGuide script_docUC_ThresholdExceedance_DirectionalSampling )
ot_pycheck_test ( UseCasesGuide script_docUC_ThresholdExceedance_Event )
ot_pycheck_test ( UseCasesGuide script_docUC_ThresholdExceedance_FORMAlgorithm )
ot_pycheck_test ( UseCasesGuide script_docUC_ThresholdExceedance_FORMandImportanceSampling )
ot_pycheck_test ( UseCasesGuide script_docUC_ThresholdExceedance_FORMExploitation )
ot_pycheck_test ( UseCasesGuide script_docUC_ThresholdExceedance_SimulationAlgo )
ot_pycheck_test ( UseCasesGuide script_docUC_ThresholdExceedance_SimulationAlgoParametrization )
ot_pycheck_test ( UseCasesGuide script_docUC_ThresholdExceedance_SimulationAlgoExploitation )
ot_pycheck_test ( UseCasesGuide script_docUC_ThresholdExceedance_StandardEventManipulation )
ot_pycheck_test ( UseCasesGuide script_docUC_ThresholdExceedance_StrongMaxTest )

add_custom_target ( check COMMAND ${CMAKE_CTEST_COMMAND} -R "^pycheck_"
                    DEPENDS ${PYINSTALLCHECK_TO_BE_RUN}
                    COMMENT "Run Python post-installation tests"  )
                    
